--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -17,7 +19,8 @@
     }
    ],
    "source": [
-    " #\n",
+    "#Problem 1: Object Types\n",
+    "#1\n",
     "y1=int(17)\n",
     "print(y1,type(y1))\n",
     "y2=float(17)\n",
@@ -30,21 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of y1, y2, y3 is 17, 17.000000, 17.\n",
+      "The value of y1, y2, or y3 is 17, 17.000000, or 17.\n",
       "The value of y3 is 17.\n"
      ]
     }
    ],
    "source": [
-    "# print(\"The value of y1 is %d.\" % (y1))\n",
-    "text = \"The value of y1, y2, y3 is %d, %f, %s.\" % (y1,y2,y3)\n",
+    "#2\n",
+    "text = \"The value of y1, y2, or y3 is %d, %f, or %s.\" % (y1,y2,y3)\n",
     "print(text)\n",
     "text = \"The value of y3 is %s.\" % (y3)\n",
     "print(text)"
@@ -52,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -64,9 +69,10 @@
     }
    ],
    "source": [
-    "a=\"I\" \n",
+    "#Problem 2: String Operations\n",
+    "a=\"I\"\n",
     "b=\"love\"\n",
-    "c=\"learning\" \n",
+    "c=\"learning\"\n",
     "d=\"how\"\n",
     "e=\"to\"\n",
     "f=\"code\"\n",
@@ -77,16 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -98,17 +95,20 @@
     }
    ],
    "source": [
+    "#Problem 3: Iterative and Recursive Operations\n",
     "#iterative operation\n",
-    "mysum = 0\n",
-    "n = 100\n",
-    "for i in range(1,n+1):\n",
-    "    mysum += i\n",
-    "print(mysum)"
+    "def iterative(n):\n",
+    "    mysum = 0\n",
+    "    for i in range(1,n+1):\n",
+    "        mysum += i\n",
+    "    return(mysum)\n",
+    "\n",
+    "print(iterative(100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,19 +120,17 @@
     }
    ],
    "source": [
-    "#recursive operation\n",
-    "def fact(n): \n",
+    "# recursive operation\n",
+    "def fact(n):\n",
     "    if n == 1:\n",
-    "        return 1 \n",
+    "        return 1\n",
     "    else:\n",
-    "        return n+fact(n-1)\n",
-    "    \n",
-    "print(fact(100))"
+    "        return n + fact(n - 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,21 +143,25 @@
     }
    ],
    "source": [
-    "yours=[\"Yale\", \"MIT\", \"Berkeley\"] \n",
-    "mine=[\"Stanford\", \"SJTU\", \"Yale\"] \n",
+    "#Problem 4: Lists and Mutability\n",
+    "yours=[\"Yale\", \"MIT\", \"Berkeley\"]\n",
+    "mine=[\"Stanford\", \"SJTU\", \"Yale\"]\n",
     "ours1 = mine + yours\n",
-    "print(ours1)\n",
-    "ours2 = [] \n",
-    "ours2.append(mine) \n",
+    "\n",
+    "ours2 = []\n",
+    "ours2.append(mine)\n",
     "ours2.append(yours)\n",
+    "\n",
+    "#1. Print ours1 and ours2. Describe how ours1 and ours2 differ from each other.\n",
+    "print(ours1)\n",
     "print(ours2)\n",
-    "#The difference: + combine two lists into one, \n",
-    "#append: a new list contain two sub-list "
+    "#Ours1: \"+ operator\" combines the two lists, yours and mine, together, and creates a new list ours1. It concatenates the elements from yours and mine to the new list. \n",
+    "#Ours2: \"append\" mutates the list and adds the list \"mine\" as the element to the end of the list mine. Thus, ours2 is a list with the elements of two lists."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -167,21 +169,23 @@
      "output_type": "stream",
      "text": [
       "['Stanford', 'SJTU', 'Yale', 'Yale', 'MIT', 'Berkeley']\n",
-      "[['Stanford', 'SJTU', 'Yale'], ['Yale', 'Harvard', 'Berkeley']]\n"
+      "[['Stanford', 'SJTU', 'Yale'], ['Yale', 'Harvard', 'Berkeley']]\n",
+      "['Yale', 'Harvard', 'Berkeley']\n"
      ]
     }
    ],
    "source": [
-    "yours[1]=\"Harvard\" \n",
+    "#2. Change the second element of yours to something else and again print ours1 and ours2. Explain why changing yours would changes ours2 but not ours1.2. \n",
+    "yours[1]=\"Harvard\"\n",
     "print(ours1)\n",
     "print(ours2)\n",
-    "#ours1 store\n",
-    "#ours2 store "
+    "#Because a list is an object in memory, and it is mutable. By using a key phrase to change an object,such as append here, any variable points to that object will be affected. \n",
+    "#Thus, changing the element in yours would also influence ours2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,6 +198,7 @@
     }
    ],
    "source": [
+    "#Problem 5: Dictionaries \n",
     "month_dict={\"1\":\"January\",\"2\":\"Feburary\",\"3\":\"March\",\"4\":\"April\",\"5\":\"May\",\"6\":\"June\",\"7\":\"July\",\"8\":\"August\",\"9\":\"September\",\"10\":\"October\",\"11\":\"November\",\"12\":\"December\"}\n",
     "month_dict.keys()\n",
     "month_dict[\"2\"]\n",
@@ -201,15 +206,6 @@
     "print(\"The sixth month is \"+ month_dict[\"6\"]+\".\")\n",
     "print(month_dict[\"2\"]+\" is month 2.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
