--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -19,6 +19,7 @@
     }
    ],
    "source": [
+    "#HPM573 HW1 Lanxin Jiang\n",
     "#Problem 1: Object Types\n",
     "#1\n",
     "y1=int(17)\n",
